kubernetes/backend/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-container
  template:
    metadata:
      labels:
        app: post-container
    spec:
      containers:
        - name: post
          image: ados1991/post:1.0.2
          ports:
            - containerPort: 8000
