kubernetes/backend/backend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: post-service
  labels:
    service: post-service
spec:
  selector:
    app: post-container
  ports:
  - port: 8000
    targetPort: 8000
